<resources>
    <string name="app_name">SOWP ADMIN</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="app_logo_description">NexCode Logo</string>
    <string name="app_tagline">Empowering Learning, Anywhere</string>
    <string name="course_image_description">Course Image</string>
    <string name="open_course_button_description">Open Course Button</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="course_title_format">Wanna Learn, %1$s?</string>
    <string name="untitled_course">Untitled Course</string>
    <string name="no_description">No description available.</string>
    <string name="course_not_found">Course not found.</string>
    <string name="back_button">Back</string>
    <string name="video_load_error">Failed to load video</string>
    <string name="edit_profile">Edit profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="courses">Courses</string>
    <string name="certificates">Certificates</string>
    <string name="points">Points</string>
    <string name="learning_progress">Learning Progress</string>
    <string name="current_course">Current Course</string>
    <string name="progress">Progress:</string>
    <string name="hours_studied">Hours Studied</string>
    <string name="quiz_score">Quiz Score</string>
    <string name="streak">Streak</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="logout">Logout</string>
    <string name="app_version">Version 1.0.0</string>
    <!-- Profile Screen -->
    <string name="profile_title">Edit Profile</string>
    <string name="profile_photo_description">Profile photo</string>
    <string name="change_photo_description">Change profile photo</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="basic_information">Basic Information</string>
    <string name="contact_information">Contact Information</string>
    <string name="additional_settings">Additional Settings</string>

    <!-- Input Hints -->
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="full_name_hint">Full Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="dob_hint">Date of Birth</string>

    <!-- Settings -->
    <string name="email_notifications">Email Notifications</string>
    <string name="email_notifications_description">Get updates on new courses and learning opportunities</string>
    <string name="profile_privacy">Profile Privacy</string>
    <string name="profile_privacy_description">Make your profile visible to other learners</string>

    <!-- Buttons -->
    <string name="save_changes">Save Changes</string>
    <string name="discard">Discard</string>

    <!-- Splash screen strings -->
    <string name="loading_message">Loading amazing features...</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id">92775972072-rqd8dh410acs1cp7p623066nuhdj4v83.apps.googleusercontent.com</string>
    <!-- Profile Section -->

    <string name="premium_member">Premium Member</string>

    <!-- Learning Goals Section -->
    <string name="learning_goals">Learning Goals &amp; Achievements</string>
    <string name="weekly_learning_goal">Weekly Learning Goal</string>
    <string name="recent_badges">Recent Badges</string>
    <string name="badge_fast_learner">Fast Learner</string>
    <string name="badge_quiz_master">Quiz Master</string>
    <string name="badge_streak">15-Day Streak</string>
    <string name="badge_helpful_peer">Helpful Peer</string>
    <string name="view_all">View All</string>

    <!-- Personal Information Section -->
    <string name="location">Location</string>

    <!-- Learning Progress Section -->
    <string name="next_recommended_lesson">Next Recommended Lesson</string>
    <string name="resume">Resume</string>
    <string name="view_all_courses">View All Courses</string>

    <!-- Learning Community Section -->
    <string name="learning_community">Learning Community</string>
    <string name="my_study_groups">My Study Groups</string>
    <string name="active_groups">3 active groups</string>
    <string name="forum_activity">Forum Activity</string>
    <string name="forum_stats">12 posts, 45 replies</string>
    <string name="learning_buddies">Learning Buddies</string>
    <string name="find_study_partners">Find study partners</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="assignment_management">Assignment Management</string>
    <string name="manage_assignments_efficiently">Manage your assignments efficiently</string>
    <string name="total_assignments">Total Assignments</string>
    <string name="view_assignment_list">1. View Assignment List</string>
    <string name="browse_manage_assignments">Browse and manage existing assignments</string>
    <string name="upload_new_assignment">2. Upload a New Assignment</string>
    <string name="create_upload_assignment_content">Create and upload new assignment content</string>
    <string name="view_unchecked_assignments">3. View Unchecked Assignments</string>
    <string name="view_unchecked_grade_users">View unchecked assignments and grade users</string>
    <string name="view_assignments">View Assignments</string>
    <string name="upload_assignment">Upload Assignment</string>
    <string name="unchecked_assignments">Unchecked Assignments</string>
    <string name="navigate_forward">Navigate Forward</string>

    <!-- Account Settings Section -->
    <string name="privacy_settings">Privacy Settings</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

</resources>